force-app/main/default/lwc/landingPageMainSection/landingPageMainSection.css
lightning-tabset {
  --slds-c-tabs-item-color-border-active: #1c1c1c;
  --slds-c-tabs-item-color-border-hover: #1c1c1c;
  --slds-c-tabs-item-text-color: #b84c16;
  --slds-c-tabs-item-text-color-active: #b84c16;
  --slds-c-tabs-item-text-color-hover: #b84c16;
}

@font-face {
  font-family: "Swiss_Bold";
  src: url("/resource/Swiss/_MI_Swiss721BT-BoldCondensed.otf")
    format("TrueType");
}

@font-face {
  font-family: "Proxima_Nova_Bold";
  src: url("/resource/Proxima_Nova/_MI_Proxima-Nova-Bold.otf")
    format("TrueType");
}

@font-face {
  font-family: "Proxima_Nova_Regular";
  src: url("/resource/Proxima_Nova/_MI_Proxima-Nova-Regular.otf")
    format("TrueType");
}

.display {
  font-family: Swiss_Bold;
  font-size: 55px;
  line-height: 66px;
}
.H1 {
  font-family: Swiss_Bold;
  font-size: 44px;
  line-height: 44px;
}

.H2 {
  font-family: Swiss_Bold;
  font-size: 32px;
  line-height: 32px;
}

.H3 {
  font-family: Proxima_Nova_Bold;
  font-size: 26px;
  line-height: 26px;
}

.H4 {
  font-family: Proxima_Nova_Bold;
  font-size: 20px;
  line-height: 24px;
}

.body {
  font-family: Proxima_Nova_Regular;
  font-size: 16px;
  line-height: 24px;
}

.small-body {
  font-family: Proxima_Nova_Regular;
  font-size: 12px;
}

.error {
  --slds-c-alert-color-background: #ffcccc;
  --slds-c-alert-color-border: #cc0000;
  --slds-c-alert-text-color: #cc0000;
}

